...
    let processID: Int

    var body: some View {
        if let process = processes.runningProcesses.first(where: { $0.id == processID }) {
            VStack(spacing: 15) {
                // MARK: - Header
                Text("Process Details")
                    .font(.largeTitle)
                    .bold()
                
                // MARK: - Process Name
                HStack {
                    Text("Process name:")
                        .font(.headline)
                    Spacer()
                    Text("\(process.fullProcessName)")
                }
                
                // MARK: - Process ID
                HStack {
                    Text("Process ID:")
                        .font(.headline)
                    Spacer()
                    Text("\(process.id)")
                }
                
                // MARK: - CPU Usage
                HStack {
                    Text("CPU Usage:")
                        .font(.headline)
                    Spacer()
                    Text("\(process.cpuUsage, specifier: "%.2f")%")
                        .foregroundColor(.blue)
                }
                
                // MARK: - Memory Usage
                HStack {
                    Text("Memory Usage:")
                        .font(.headline)
                    Spacer()
                    Text("\(process.memoryUsage, specifier: "%.2f") MB")
                        .foregroundColor(.green)
                }
                
...
