...
    @Query private var items: [Item]
    #if os(macOS)
    @State private var selectedProcessID: Int? = nil
    #endif
    
    let options: [Option] = [
        .init(title: "System", imageName: "desktopcomputer"),
        .init(title: "Process", imageName: "cpu"),
        .init(title: "Log", imageName: "doc.text"),
        .init(title: "Settings", imageName: "gear")
    ]

    @State private var selectedOption: Option? = Option(title: "System", imageName: "desktopcomputer")

    var body: some View {
#if os(macOS)
...
            NavigationLink(value: option) {
                Label(option.title, systemImage: option.imageName)
            }
            .accessibilityIdentifier(option.title)
            .accessibilityAddTraits(.isButton)
        }
        .navigationTitle("MacPulse")
    }

    @ViewBuilder
    private var detailViewMac: some View {
        VStack {
            switch selectedOption?.title {
...
